Body parameters has been featched from the input validation schema passed as default parameter. Blocked the static urls to be appear in swagger yaml file.
